src/objects/QQNTruncatedDQN__c.object
<CustomObject>
    <description>A truncated Deep Q-Network</description>
    <fields>
        <fullName>BatchSize__c</fullName>
        <label>BatchSize</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DiscountFactor__c</fullName>
        <label>DiscountFactor</label>
        <precision>10</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MseThreshold__c</fullName>
        <label>MseThreshold</label>
        <precision>12</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PendingBatches__c</fullName>
        <label>PendingBatches</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTableRef__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>QTableRef</label>
        <referenceTo>QQNNeuralNetwork__c</referenceTo>
        <relationshipName>TruncatedDQN</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>QQNTruncatedDQN</label>
    <nameField>
        <displayFormat>AITDQN-{000000}</displayFormat>
        <label>TruncatedDQN Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>